# mds-524-collab-py

./: .gitignore  README.md  pyproject.toml
src/mehmetmga_py_524/: __init__.py  core.py
tests/: test_core.py
